--- a/Web.Statu/Content/new.css
+++ b/Web.Statu/Content/new.css
@@ -2566,6 +2566,17 @@ a.form-search__hint:active:focus {
         border-bottom: dotted 2px #E0E6ED;
     }
 
+    .table.table-condensed > thead > tr > th,
+    .table.table-condensed > tbody > tr > th,
+    .table.table-condensed > tfoot > tr > th,
+    .tabletable-condensed > thead > tr > td,
+    .table.table-condensed > tbody > tr > td,
+    .table.table-condensed > tfoot > tr > td {
+        padding: 3px;
+        line-height: 1em;
+    }
+
+
 .table-new table tr {
     border-bottom: solid thin #E0E6ED;
 }
