--- a/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
@@ -46,7 +46,7 @@
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
         <li><a href="/kindex">K–Index</a></li>
-        <li><a href="/kindex/zebricek">Žebříčky</a></li>
+        <li><a href="/kindex/zebricek">Žebříčky úřadů a organizací</a></li>
         <li class="active">@ViewBag.Title @ViewBag.SubTitle</li>
     </ol>
 }
