--- a/Web.Statu/Views/Kindex/Zebricek.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.cshtml
@@ -63,8 +63,8 @@
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
         <li><a href="/kindex">K–Index</a></li>
-        <li><a href="/kindex/zebricek">Žebříčky</a></li>
-        <li class="active">@ViewBag.Title + " " + @ViewBag.SubTitle</li>
+        <li><a href="/kindex/zebricek">Žebříčky úřadů a organizací</a></li>
+        <li class="active">@(ViewBag.Title + " " + ViewBag.SubTitle)</li>
     </ol>
 }
 
@@ -125,15 +125,19 @@
                 }
                 @foreach (var group in filterGroups)
                 {
-                    if (group.Key != selectedGroup)
+                    if (group.Key == selectedGroup)
+                    {
+                        <span style="padding-right:20px;font-weight:bold"><i class="fas fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
+                    }
+                    else if (group.Key == selectedKraj)
+                    {
+                        <span style="padding-right:20px;font-weight:bold"><i class="fas fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
+                    }
+                    else
                     {
                         <span style="padding-right:20px;">
                             <a href="@(ViewBag.SelectedLadder)?@filterUrlValue=@System.Net.WebUtility.UrlEncode(group.Key)&rok=@selectedYear"><i class="fas fa-arrow-square-right"></i>@group.Key </a>(@group.Value)
                         </span>
-                    }
-                    else
-                    {
-                        <span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i>@group.Key (@group.Value)</span>
                     }
                 }
             </div>
@@ -147,7 +151,7 @@
 <div class="row">
     <div class="col-sm-12">
 
-        <table class="table table-striped table-dotted table-condensed table-hover">
+        <table class="table table-striped table-dotted table-hover">
             <thead>
                 <tr>
                     <th>Pořadí</th>
@@ -159,7 +163,11 @@
             </thead>
             <tbody>
                 @foreach (var record in data
-                    .Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
+                    .Where(r => !( r.KIndex == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue 
+                            || r.KIndex == 0
+                        )
+                        
+                    )
                     .Select((m, i) => new { rank = i + 1, item = m })
                     )
                 {
@@ -187,7 +195,7 @@
             <p>
                 @{
                     string[] rest = data
-                        .Where(r => r.KIndex == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
+                        .Where(r => r.KIndex == HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue || r.KIndex==0 )
                         .Select(r => Html.KIndexIcon(KIndexData.KIndexLabelValues.None, 15, showNone: true).ToHtmlString()
                             + $"<a href=\"/subjekt/{r.Ico} \">{r.Jmeno}</a>"
                         ).ToArray();
