--- a/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
@@ -114,7 +114,7 @@
 <div class="row">
     <div class="col-sm-12">
 
-        <table class="table table-striped table-dotted table-condensed table-hover">
+        <table class="table table-striped table-dotted table-hover">
             <thead>
                 <tr>
                     <th>Pořadí</th>
@@ -126,8 +126,8 @@
             </thead>
             <tbody>
                 @foreach (var record in data
-                    .Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
-                    .Select((m, i) => new { rank = i + 1, item = m }))
+    .Where(r => r.KIndex != HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.MinSmluvPerYearKIndexValue)
+    .Select((m, i) => new { rank = i + 1, item = m }))
                 {
                     <tr>
                         <td>
@@ -140,14 +140,20 @@
                             <a href="/subjekt/@record.item.Ico">@record.item.Jmeno</a>
                         </td>
                         <td class="number">
-                            <a href="/kindex/detail/@record.item.Ico?rok=@selectedYear">
-                                @{ 
-                                    KIndexData.KIndexLabelValues from = KIndexData.CalculateLabel(record.item.Roky.First().Value);
-                                    KIndexData.KIndexLabelValues to = KIndexData.CalculateLabel(record.item.Roky.Last().Value);
-                                }
-                                @Html.KIndexIcon(from,18)
+                            @{
+                                KIndexData.KIndexLabelValues from = KIndexData.CalculateLabel(record.item.Roky.First().Value);
+                                KIndexData.KIndexLabelValues to = KIndexData.CalculateLabel(record.item.Roky.Last().Value);
+                                decimal rozdil = record.item.Roky.Last().Value - record.item.Roky.First().Value;
+                            }
+
+                            <a href="/kindex/detail/@record.item.Ico?rok=@selectedYear" title="Rozdíl o @HlidacStatu.Util.RenderData.NiceNumber(Math.Abs(rozdil)) bodů">
+                                @Html.KIndexIcon(from, 18)
                                 <i class="far fa-angle-double-right"></i>
-                                @Html.KIndexIcon(to,18)
+                                @Html.KIndexIcon(to, 18)
+                                @if (from == to)
+                                { 
+                                    <div class="small text-muted">@(rozdil < 0 ? "Zlepšení" : "Zhoršení") v rámci jedné známky o @HlidacStatu.Util.RenderData.NiceNumber(Math.Abs(rozdil)) bodů.</div>
+                                }
                             </a>
                         </td>
                         @*<td></td>*@
