kindex view cache

--- a/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Skokani.cshtml
@@ -7,6 +7,7 @@
 @using System.Text.RegularExpressions;
 
 @{
+    Layout = null;
 
     int selectedYear = ViewBag.SelectedYear;
     string selectedGroup = ViewBag.SelectedGroup;
