--- a/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
@@ -6,7 +6,7 @@
 @using System.Text.RegularExpressions;
 
 @{
-
+    Layout = null;
     ViewBag.Title = "Porovnání K–Index pro různé skupiny úřadů a organizací";
     //ViewBag.HideTitle = true;
 
