--- a/Web.Statu/Views/Kindex/Zebricek.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.cshtml
@@ -7,7 +7,7 @@
 @using System.Text.RegularExpressions;
 
 @{
-    int selectedYear = ViewBag.SelectedYear;
+    int? selectedYear = ViewBag.SelectedYear;
     string selectedGroup = ViewBag.SelectedGroup;
     string selectedKraj = ViewBag.SelectedKraj;
 
