--- a/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.Index.cshtml
@@ -75,12 +75,21 @@
                     </div>
 
                 }
-                <h3>Ostatní</h3>
+                <h3>Souhrnné</h3>
                 <div>
                     <a href="/kindex/zebricek/skokani" class="btn btn-default"><span class="text-gray">Porovnat</span> největší skokany</a>
                     <a href="/kindex/zebricek/nejlepsi" class="btn btn-default"><span class="text-gray">Porovnat</span> 100 nejlepších</a>
                     <a href="/kindex/zebricek/nejhorsi" class="btn btn-default"><span class="text-gray">Porovnat</span> 100 nejhorších</a>
                     <a href="/kindex/zebricek/celkove" class="btn btn-default"><span class="text-gray">Porovnat</span> všechny</a>
+
+                </div>
+                <h3>Podle jednotlivých parametrů K-Indexu</h3>
+                <div>
+                    @foreach (var item in Devmasters.Enums.EnumTools.EnumToEnumerable<KIndexData.KIndexParts>())
+                    {
+                        <a href="/kindex/zebricek/part_@item.Value" class="btn btn-default"><span class="text-gray">Porovnat</span> podle @(item.Value.ToNiceDisplayName())</a>
+
+                    }
 
                 </div>
             </div>
