--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -15,7 +15,7 @@
     //ViewBag.SubTitle = "pro " + firma.Jmeno;
     ViewBag.HideTitle = true;
 
-    Statistics statistics = Statistics.GetStatistics(selectedYear);
+    //Statistics statistics = Statistics.GetStatistics(selectedYear);
 
     string ukazatTxt = "ukázat detail";
     string schovatTxt = "schovat detail";
@@ -67,7 +67,26 @@
     }
 </style>
 
-<h2>Porovnání K–Indexu úřadů</h2>
+<h2>Porovnání vybraných K–Indexů pro rok @selectedYear</h2>
+
+<div class="row">
+    <div class="col-sm-12">
+        <h3 class="">
+            Porovnání pro další roky:
+            @foreach (int year in Consts.CalculationYears )
+            {
+                if (year != selectedYear)
+                {
+                    <a style="padding-right:20px;" href="?rok=@year"><i class="fas fa-arrow-square-right"></i>@year</a>
+                }
+                else
+                {
+                    <span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i>@year</span>
+                }
+            }
+        </h3>
+    </div>
+</div>
 
 <div class="bs-callout bs-callout-primary" style="padding-bottom:30px;">
     <h4>Porovnání základních hodnot</h4>
