--- a/Web.Statu/Views/Kindex/Zebricek_child.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek_child.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<SubjectWithKIndex>
 
-@using Devmasters.Core;
+@using Devmasters.Enums;
 @using HlidacStatu.Lib.Analysis.KorupcniRiziko;
 @using HlidacStatu.Web.Framework;
 @using System.Linq;
